css/style dark.css
body
{
	font-family: Arial, Helvetica, sans-serif;
	font-size: 15.5px;
	line-height: 1.5;

	padding: 0px;
	margin-top: 0px;

	background-color: #35424a;

	position: relative;
	min-height: 100vh;
}

main
{
    width: 56%;
    margin: auto;
    /**margin-top: 160px;**/
}

footer
{
	position: relative;
	padding-top: 5px;
	left: 0;
	bottom: 0;
	width: 100%;
	border-top: #00abe1 3px solid;
	color: white;
	font-size: 0.6em;
	text-align: center;
	margin-top: 20px;
}

mark
{
	background: #361999;
	color: white;
}

#container
{
	position: relative;
	width: 80%;
	margin-left: 10%;
	margin-right: 10%;
	overflow: visible;
	align-content: center;
	min-height: 12vh; /* 17 is deafult */
}

/*Header*/
header
{
	z-index: 1;
	color: white;
	width: 100%;
}


header .nav-text
{
	width: 75%;
	background-color: transparent;
	border-bottom: #00abe1 0px solid;
	margin-bottom: 3px;
}

header #logo
{
	float: left;
}

header .highlight, header .current a {
	color: #00abe1;
	font-weight: bold;
}

header label
{
	float: left;
}
/*logo*/
#logo
{
	position: absolute;
	right: 10px;
	z-index: 2;
}
#logo img
{
	height:100px;
}

/*nav*/
.nav-text nav a
{
	color: white;
	text-decoration: none;
	text-transform: uppercase;
	font-size: 16px;
}
.nav-text nav a:hover
{
	color: #00abe1;
}

.nav-text nav ul
{
	padding: 0;
	margin: 0;
}

.nav-text nav li,.nav-text nav
{
	float: left;
	display: inline;
	padding: 0px 45px 5px 0;
	font-weight: bold;
}

.nav-text nav
{
	margin: 10px 10% 0 10%;
	float: left;
}
.nav-text
{
	z-index: 1;
	float: left;
	width: 100%;
	position: sticky;
	top: 0;
	background-color: #35424adb;
	backdrop-filter: blur(3px);
	-webkit-backdrop-filter: blur(3px);
	border-bottom: #00abe1 3px solid;
	margin-bottom: 5px;
}

.youtube-vid
{
	width: 80%;
	margin: auto;
}

/*Main in Page*/

h2
{
	color: #3E73DE;
	margin: 0px 0 5px 0;
	border-bottom: #00abe1 6px double;
}

h3
{
	color: #3E73DE;
	margin: 0px 0 5px 0;
}

h4
{
	font-size: medium;
	padding: 2px;
	line-height: 1px;
}
h5
{
	font-size: small;
	padding: 2px;
	line-height: 1px;
	height: 4px;
}
h6
{
	font-size: x-small;
	padding: 2px;
	line-height: 1px;
	height: 3px;
}


p
{
	color: white;
	margin: 0;
	padding-bottom: 25px;
}

q
{
	color: white;
}

a
{
	color: #00abe1;
}

form
{
	margin: auto;
	width: max-content;
}
input
{
	margin: 5px;
	padding: 5px;
	color: #262f35;
	border: #00abe1 3px solid;
	border-radius: 10px;
	background-color: white;
}


.split
{
	margin: 15px 10px 15px 10px;
	border: #00abe1 2.5px solid;
}

main ul, ol
{
    background: #3E73DE;
    border: #00abe1 4px solid;
	border-radius: 20px;
    color: white;
    width: 80%;
    margin: auto;
	padding: 4px 2px 2px 20px;
}

.center
{
	display: flex;
	margin: auto;
	max-width: fit-content;
}

.embed
{
	border-radius: 10px;
	padding: 10px;
	background-color: #8f8f8f73;
}

.pp,.arun-pp
{
	height: 40px;
	border-radius: 50%;
}

/** https://www.youtube.com/watch?v=tXiWZTg4aGE **/
.switch
{
	opacity: 0;
}
.switch-vis
{
	width: 80px;
	height: 40px;
	background: white;
	border-radius: 20px;
	position: relative;
	cursor: pointer;
	box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.3);
}
.switch-vis::before
{
	content: '';
	position: absolute;
	height: 32px;
	width: 32px;
	background: #b3cbda;
	border-radius: 50%;
	left: 4px;
	top: 4px;
	transition: all 150ms ease-out;
	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
}
input[type=checkbox]:checked + .switch-vis::before
{
	left: 42px;
	background: #35424a;
}
input[type=checkbox]:checked + .switch-vis
{
	background: #7cff6b;
}

mark
{
	background-color: #414675;
	border-radius: 3px;
	padding: 2px;
}

.channel
{
	color: #D4E1F8;
}

#icons img
{
	height: 240px;
}

#percentImg
{
	height: 350px;
	position: left;
}

#numberImg
{
	height: 350px;
	position: right;
}

#floating-notice
{
	background-color: #35424a;
	color: #d3d3d3;
	border: #d3d3d3 4px solid;
	border-radius: 20px;
	bottom: 20px;
	padding: 20px 20px 0px 20px;
	position: sticky;
	z-index: 1;
	display:block;
	width: 60%;
	margin: auto;
}
#floating-notice img
{
	float: right;
	cursor: pointer;
}

.card
{
	position: relative;
	border: red 5px solid;
	border-radius: 0.5cm;
	background-color: white;
	background-image: url("../media/pattern.png");
	margin: auto;
	padding: 0.6cm;
	min-height: 50vh;
	max-width: 7cm;
}
.card p
{
	text-align: center;
	color: #35424a;
	font-size: large;
	padding: 2vh 0 0 0 ;
}

.button,.submit-button,#next-button
{
	background-color: #00abe1;
	border-radius: 10px;
	cursor: pointer;
	width: min-content;
}

.button
{
	padding: 5px 30px 5px 30px;
	margin: 5px;
	margin-top: 5px;
	display: inline-block;
}

#next-button
{
	position: relative;
	margin: auto;
	margin-top: 5px;
	padding: 10px 50px 10px 50px;
	
	min-height: auto;
	max-width: 7cm;
	text-align: center;
	color: #35424a;
	font-size: large;
}

.submit-button
{
	padding: auto;
	background-color: transparent;
	border: none;
	background-image: url("https://ueacs.co.uk/media/arrow.png");
	background-size: contain;
	background-repeat: round;
	width: 30px;
}

#names
{
	width: 100%;
	max-height: max-content;
}

.table-area
{
	display: table;
	table-layout: 10%;
	width: 100%;
}

#logo-left
{
	display: table-cell;
	float: left;
}
#logo-left img, #logo-right img
{
	width: 10vw;
}
#logo-right
{
	display: table-cell;
	float: right;
}
#center-text
{
	text-align: center;
}
#vertical-nav
{
	display: inline-block;
	width: 30%;
	padding: 1%;
}
#vertical-nav ul
{
	padding: 0;
	margin: 0 auto auto auto;
	display: block;
	background: none;
	border: #00abe1 solid;
	
}
#vertical-nav li
{
	float: none;
	display: block;
	text-align: center;
	line-height: 10vh;
}
#vertical-nav a
{
	color: white;
	display: block;
	text-transform: uppercase;
	text-decoration: none;
	font-size: 16px;
	font-weight: bold;
}
/** Mobile Devices **/
@media only screen and (max-width:768px)
{
	body
	{
		padding: 10px;
		display: block;
		background-color: #35424a;
	}
	main
	{
		display: block;
		width: 100%;
		border: none;
		padding: 0;
		margin-top: 69px;

	}
	footer
	{
		position: relative;
		padding-top: .05cm;
		left: 0;
		bottom: 0;
		width: 100%;
		background-color: transparent;
		color: white;
		font-size: 12px;
		text-align: center;
	}
	p
	{
		
		text-align: left;
		padding-top: 10px;
	}
	#container
	{
		margin-left: 2%;
		margin-right: 2%;
		width: 100%;
	}
	header .nav-text
	{
		position: sticky;
		display: inline-block;
		width: 90%;
		float: right;
		margin-right: 8.5%;
	}

	.nav-text h1 {
		float: right;
		padding-right: 2.5vw;
	}

	.nav-text nav
	{
		margin: auto;
		width: 100%;
		padding: 0px 0px 0px 5px;
	}
	.nav-text nav ul
	{
		padding: 0;
		margin: auto;
		text-align: center;
	}
	.nav-text nav li
	{
		padding: 0px 8px 0px 8px;
		display: inline-block;
		float: none;
		background-color: #262f35;
		border-radius: 5px;
		margin: 3px;
	}
	#logo
	{
		left: 10px;
	}
	#logo img
	{
	position: static; 
	left: 750;
	top: 15;
	height: 90px;
	}
	header label
	{
		float: right;
	}
	div .nav-text
	{
		font-size: 0.4cm;
	}
	#info-card{
	margin:auto;
	border-radius: 0.5cm;
	background-color: white;
	padding: 5px;
	margin-top: 105px;
	min-height: auto;
	display: block;
	}
}

/*For smaller mobile displays*/
@media only all and (max-width:250px)
{
	p, main li{
		font-size: 5.5vw;
	}

	h1{
		/*display :none;*/
		font-size: 12vw;
	}

	h2{
		font-size: 8.5vw;
	}

	#logo img
	{
	height: 70px;
	}

	main{
		margin-top: 73px;
	}



}

